--- a/app/src/main/res/layout/rewards_list.xml
+++ b/app/src/main/res/layout/rewards_list.xml
@@ -9,10 +9,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="TBD list"/>
+    <ListView
+        android:id="@+id/rewards_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textSize="20sp"-->
+    <!--android:text="@string/rewards_addtocart_confirmation"/>-->
 
 </LinearLayout>
