--- a/app/src/main/res/layout/rewards_list.xml
+++ b/app/src/main/res/layout/rewards_list.xml
@@ -15,6 +15,15 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
+    <TextView
+        android:id="@+id/no_rewards_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:visibility="gone"
+        android:textSize="16sp"
+        android:text="@string/no_redeemable_rewards"/>
+
     <!--<TextView-->
     <!--android:layout_width="wrap_content"-->
     <!--android:layout_height="wrap_content"-->
