--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:padding="6dp"
     android:background="#ffffff">
     <ImageView
@@ -10,24 +9,26 @@
         android:layout_width="@dimen/image_square_size"
         android:layout_height="@dimen/image_square_size"
         android:layout_marginRight="6dp"/>
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lines="2"
-            android:ellipsize="end"
-            android:textSize="16sp"/>
-        <com.staples.mobile.cfa.widget.RatingStars
-            android:id="@+id/rating"
-            style="@style/SmallRatingStars"/>
-        <com.staples.mobile.cfa.widget.PriceSticker
-            android:id="@+id/pricing"
-            style="@style/SmallPriceSticker"/>
-    </LinearLayout>
-</LinearLayout>
-
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/image"/>
+        android:lines="2"
+        android:ellipsize="end"
+        android:textSize="16sp"/>
+    <com.staples.mobile.cfa.widget.RatingStars
+        android:id="@+id/rating"
+        style="@style/SmallRatingStars"
+        android:layout_below="@+id/title"/>
+    <com.staples.mobile.cfa.widget.PriceSticker
+        android:id="@+id/pricing"
+        style="@style/SmallPriceSticker"
+        android:layout_below="@+id/rating"/>
+    <ImageView
+        android:id="@+id/action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
+</RelativeLayout>
