--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -52,7 +52,6 @@
                         android:gravity="center"
                         android:orientation="vertical">
                         <TextView
-                            android:id="@+id/clearance_loading"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
@@ -114,7 +113,6 @@
                         android:gravity="center"
                         android:orientation="vertical">
                         <TextView
-                            android:id="@+id/daily_deal_loading"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
@@ -147,12 +145,25 @@
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
                 android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left|center_vertical"
-                    android:padding="10dp"
-                    android:text="@string/feed_seen_products_title"/>
+                    android:background="#ffffff"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left|center_vertical"
+                        android:padding="10dp"
+                        android:text="@string/feed_seen_products_title"/>
+                    <TextView
+                        android:id="@+id/seen_products_clear"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="right|center_vertical"
+                        android:padding="10dp"
+                        android:text="Clear"/>
+                    </LinearLayout>
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="2dp"
@@ -167,7 +178,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:paddingLeft="10dp"/>
+                        android:paddingLeft="10dp">
+                    </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
@@ -175,7 +187,6 @@
                         android:gravity="center"
                         android:orientation="vertical">
                         <TextView
-                            android:id="@+id/seen_products_loading"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
@@ -194,6 +205,19 @@
                         android:textSize="20sp"
                         android:text="@string/empty"
                         android:padding="5dp"/>
+
+                    <RelativeLayout
+                        android:id="@+id/seen_products_loading_footer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:visibility="gone">
+                        <ProgressBar
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </RelativeLayout>
                 </com.staples.mobile.cfa.widget.DataWrapper>
             </LinearLayout>
         </LinearLayout>
