adding CardView to dashboard layouts

--- a/app/src/main/res/layout/rewards_fragment.xml
+++ b/app/src/main/res/layout/rewards_fragment.xml
@@ -5,27 +5,32 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/background_white">
 
     <!--rewards membership card-->
-    <!--<android.support.v7.widget.CardView>-->
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            card_view:contentPadding="6dp"
+            card_view:cardCornerRadius="8dp"
+            card_view:cardElevation="4dp"
+            >
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/rectangle_frame"
                 >
+                <!--android:background="@drawable/rectangle_frame"-->
                 <TextView
                     android:id="@+id/member_name"
                     android:layout_width="wrap_content"
@@ -61,14 +66,14 @@
                     android:layout_below="@id/rewards_number_barcode"
                     android:textSize="20sp"/>
             </RelativeLayout>
-        </RelativeLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
 
-    </FrameLayout>
-    <!--</android.support.v7.widget.CardView>-->
-
+    <!--tabbed section-->
     <TabHost
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:id="@android:id/tabhost">
 
         <LinearLayout
