--- a/app/src/main/res/layout/rewards_ink_recycling.xml
+++ b/app/src/main/res/layout/rewards_ink_recycling.xml
@@ -4,69 +4,77 @@
   ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    card_view:contentPadding="6dp"
+    card_view:cardCornerRadius="4dp"
+    >
 
-    <!--ink cartridges recycled-->
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        >
-        <TextView
-            android:id="@+id/cartridges_recycled"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+
+        <!--ink cartridges recycled-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingRight="6dp"
-            android:textSize="30sp"
-            android:textColor="@color/text_gray"/>
+            >
+            <TextView
+                android:id="@+id/cartridges_recycled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="6dp"
+                android:textSize="30sp"
+                android:textColor="@color/text_gray"/>
+            <TextView
+                android:id="@+id/cartridges_recycled_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/text_black"/>
+        </LinearLayout>
+
+        <!--ink cartridges limit-->
         <TextView
-            android:id="@+id/cartridges_recycled_label"
+            android:id="@+id/cartridges_limit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:textColor="@color/text_black"/>
-    </LinearLayout>
-
-    <!--ink cartridges limit-->
-    <TextView
-        android:id="@+id/cartridges_limit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@color/text_gray"/>
-
-    <!--ink cartridges earned-->
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        >
-        <TextView
-            android:id="@+id/cartridges_earned"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="6dp"
-            android:textSize="30sp"
             android:textColor="@color/text_gray"/>
+
+        <!--ink cartridges earned-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            >
+            <TextView
+                android:id="@+id/cartridges_earned"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="6dp"
+                android:textSize="30sp"
+                android:textColor="@color/text_gray"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/text_black"
+                android:text="@string/rewards_earned"/>
+        </LinearLayout>
+
+        <!--ink cartridges message-->
         <TextView
+            android:id="@+id/ink_rewards_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:textColor="@color/text_black"
-            android:text="@string/rewards_earned"/>
+            android:textColor="@color/text_gray"/>
+
     </LinearLayout>
-
-    <!--ink cartridges message-->
-    <TextView
-        android:id="@+id/ink_rewards_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@color/text_gray"/>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
