--- a/app/src/main/res/layout/rewards_summary.xml
+++ b/app/src/main/res/layout/rewards_summary.xml
@@ -4,50 +4,77 @@
   ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!--ytd savings-->
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:textSize="16sp"
-        android:textColor="@color/text_black"
-        android:text="@string/rewards_ytd_savings"/>
-    <TextView
-        android:id="@+id/total_ytd_savings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textColor="@color/text_gray"/>
+        android:layout_marginBottom="4dp"
+        card_view:contentPadding="6dp"
+        card_view:cardCornerRadius="4dp"
+        >
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/text_black"
+                android:text="@string/rewards_ytd_savings"/>
+            <TextView
+                android:id="@+id/total_ytd_savings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:textColor="@color/text_gray"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 
     <!--ytd spend-->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:textSize="16sp"
-        android:textColor="@color/text_black"
-        android:text="@string/rewards_ytd_spend"/>
-    <TextView
-        android:id="@+id/ytd_spend_goal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textColor="@color/text_gray"/>
-    <ProgressBar
-        android:id="@+id/ytd_progress"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        style="@android:style/Widget.ProgressBar.Horizontal" />
-    <TextView
-        android:id="@+id/ytd_message"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="4dp"
-        android:textSize="16sp"
-        android:textColor="@color/text_gray"/>
+        card_view:contentPadding="6dp"
+        card_view:cardCornerRadius="4dp"
+        >
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/text_black"
+                android:text="@string/rewards_ytd_spend"/>
+            <TextView
+                android:id="@+id/ytd_spend_goal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:textColor="@color/text_gray"/>
+            <ProgressBar
+                android:id="@+id/ytd_progress"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="4dp"
+                style="@android:style/Widget.ProgressBar.Horizontal" />
+            <TextView
+                android:id="@+id/ytd_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="4dp"
+                android:textSize="16sp"
+                android:textColor="@color/text_gray"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
