--- a/app/src/main/res/layout/coupon_item_add.xml
+++ b/app/src/main/res/layout/coupon_item_add.xml
@@ -5,9 +5,10 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/coupon_addition_layout"
-    style="@style/DrawerStyle"
     android:layout_width="match_parent"
-    android:background="@color/background_extra_light_gray">
+    android:layout_height="wrap_content"
+    android:background="@color/background_extra_light_gray"
+    android:padding="6dp">
     <com.staples.mobile.cfa.widget.EditTextWithImeBackEvent
         android:id="@+id/coupon_code"
         android:layout_width="wrap_content"
@@ -20,12 +21,14 @@
         android:maxLength="10"/>
     <Button
         android:id="@+id/coupon_add_button"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="35dp"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
+        android:background="@color/background_red_submission"
         android:text="@string/add"
         android:textSize="14dp"
+        android:textColor="@color/text_white"
         android:fontFamily="sans-serif"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
