--- a/app/src/main/res/layout/rewards_fragment.xml
+++ b/app/src/main/res/layout/rewards_fragment.xml
@@ -4,7 +4,7 @@
   ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.DataWrapper xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -124,4 +124,4 @@
             </FrameLayout>
         </LinearLayout>
     </TabHost>
-</LinearLayout>
+</com.staples.mobile.cfa.widget.DataWrapper>
