--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -68,55 +68,11 @@
         android:layout_weight="1"
         android:background="@color/background_extra_light_gray"
         android:visibility="gone"/>
+
     <!--link rewards account -->
-    <RelativeLayout
+    <include layout="@layout/rewards_linking"
         android:id="@+id/link_rewards_acct_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background_extra_light_gray"
-        android:padding="6dp"
-        android:visibility="gone">
-        <TextView
-            android:id="@+id/link_rewards_heading"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:textSize="20sp"
-            android:text="@string/link_rewards_account"
-            />
-        <EditText
-            android:id="@+id/rewards_card_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/link_rewards_heading"
-            android:hint="@string/rewards_card_number"
-            android:inputType="number"
-            android:imeOptions="actionNext"
-            android:maxLength="10"/>
-        <EditText
-            android:id="@+id/rewards_phone_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/rewards_card_number"
-            android:hint="@string/rewards_phone_number"
-            android:inputType="phone"
-            android:imeOptions="actionDone"
-            android:maxLength="15"/>
-        <Button
-            android:id="@+id/rewards_link_acct_button"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_below="@id/rewards_phone_number"
-            android:layout_alignParentRight="true"
-            android:text="@string/link_account"
-            android:textSize="14dp"
-            android:fontFamily="sans-serif"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            />
-    </RelativeLayout>
+        android:visibility="gone"/>
 
 
     <!--shipping info-->
