--- a/app/src/main/res/layout/bundle_frame.xml
+++ b/app/src/main/res/layout/bundle_frame.xml
@@ -4,13 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <GridView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/products"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:horizontalSpacing="3dp"
-        android:verticalSpacing="3dp"
-        android:choiceMode="singleChoice"/>
+        android:layout_height="wrap_content"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
