--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/fixed_grid_wide_height"
     android:padding="6dp"
     android:background="#ffffff">
     <ImageView
@@ -14,16 +14,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/image"/>
-        android:lines="2"
+        android:lines="2
         android:ellipsize="end"
         android:textSize="16sp"/>
     <com.staples.mobile.cfa.widget.RatingStars
         android:id="@+id/rating"
         style="@style/SmallRatingStars"
+        android:layout_alignLeft="@+id/title"
         android:layout_below="@+id/title"/>
     <com.staples.mobile.cfa.widget.PriceSticker
         android:id="@+id/pricing"
         style="@style/SmallPriceSticker"
+        android:layout_alignLeft="@+id/rating"
         android:layout_below="@+id/rating"/>
     <ImageView
         android:id="@+id/action"
