--- a/app/src/main/res/layout/cart_item_group.xml
+++ b/app/src/main/res/layout/cart_item_group.xml
@@ -13,42 +13,38 @@
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="4dp">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/cartitem_shipping_estimate_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:padding="8dp">
 
         <!--shipping estimate info-->
-        <FrameLayout
-            android:id="@+id/cartitem_shipping_estimate_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/cartitem_shipping_estimate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:textSize="12sp"/>
-            <TextView
-                android:id="@+id/cartitem_shipping_estimate_itemqty"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:textSize="12sp"/>
-        </FrameLayout>
+        <TextView
+            android:id="@+id/cartitem_shipping_estimate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:textSize="12sp"/>
+        <TextView
+            android:id="@+id/cartitem_shipping_estimate_itemqty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:textSize="12sp"/>
 
         <!--list of cart items within group on card -->
         <LinearLayout
             android:id="@+id/cart_item_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="6dp">
+            android:layout_below="@id/cartitem_shipping_estimate"
+            android:orientation="vertical">
 
             <!-- fill cart items dynamically-->
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
+
 </android.support.v7.widget.CardView>
