--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -15,7 +15,10 @@
         <attr name="android:textSize"/>
     </declare-styleable>
     <declare-styleable name="PriceSticker">
-        <attr name="android:textSize"/>
+        <attr name="majorTextSize" format="dimension"/>
+        <attr name="minorTextSize" format="dimension"/>
+        <attr name="majorTextColor" format="color"/>
+        <attr name="minorTextColor" format="color"/>
         <attr name="android:gravity"/>
     </declare-styleable>
     <declare-styleable name="RatingStars">
