--- a/app/src/main/res/layout/coupon_item_applied.xml
+++ b/app/src/main/res/layout/coupon_item_applied.xml
@@ -6,7 +6,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background_extra_light_gray"
     android:padding="6dp">
 
     <!--text fields-->
@@ -36,10 +35,10 @@
         android:layout_height="35dp"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
-        android:background="@color/background_red_submission"
+        android:background="@color/background_extra_light_gray"
+        android:textColor="@color/text_black"
         android:text="@string/remove"
         android:textSize="14dp"
-        android:textColor="@color/text_white"
         android:fontFamily="sans-serif"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
