--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -30,13 +30,16 @@
         android:visibility="gone"
         />
 
-    <!--cart listview (using cards and no divider)-->
+    <!--cart listview (using cards and no divider, smoothScrollbar="false" because items vary in height)-->
+    <!--todo: experiment with setting scrollingCache and animationCache to false for performance-->
+    <!--todo: experiment with smoothScrollbar on device-->
     <ListView
         android:id="@+id/cart_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:choiceMode="singleChoice"
+        android:smoothScrollbar="false"
         android:divider="#ffffffff"
         android:background="@color/background_white"/>
 
@@ -67,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/background_extra_light_gray"
+        android:background="@color/background_white"
         android:visibility="gone"/>
 
     <!--link rewards account -->
