--- a/app/src/main/res/layout/cart_item_group.xml
+++ b/app/src/main/res/layout/cart_item_group.xml
@@ -9,7 +9,7 @@
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_margin="8dp"
-    card_view:contentPadding="6dp"
+    card_view:contentPadding="0dp"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="4dp">
 
@@ -17,28 +17,34 @@
         android:id="@+id/cartitem_shipping_estimate_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="0dp">
 
         <!--shipping estimate info-->
         <TextView
             android:id="@+id/cartitem_shipping_estimate"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
             android:layout_alignParentLeft="true"
-            android:textSize="12sp"/>
+            android:gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:textColor="@color/text_gray"
+            android:textSize="14sp"/>
         <TextView
             android:id="@+id/cartitem_shipping_estimate_itemqty"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
             android:layout_alignParentRight="true"
-            android:textSize="12sp"/>
+            android:gravity="center_vertical"
+            android:paddingRight="16dp"
+            android:textColor="@color/text_gray"
+            android:textSize="14sp"/>
         <!--horizontal rule-->
         <View
             android:id="@+id/horizontal_rule"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/cartitem_shipping_estimate"
-            android:background="@color/background_extra_light_gray" />
+            android:background="@color/hr_extra_light_gray" />
 
         <!--list of cart items within group on card -->
         <LinearLayout
@@ -46,6 +52,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/horizontal_rule"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
             android:orientation="vertical">
 
             <!-- fill cart items dynamically-->
