--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -9,6 +9,7 @@
     <color name="background_extra_light_gray_2">#eeeeee</color>
     <color name="background_green">#00ff00</color>
     <color name="background_blue">#3f6fff</color>
+    <color name="hr_extra_light_gray">#f5f5f5</color>
     <color name="text_blue">#3f9fff</color>
     <color name="text_red">#ff0000</color>
     <color name="text_green">#00ff00</color>
