--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -32,25 +32,23 @@
             android:layout_alignParentTop="true"
             android:lines="2"
             android:ellipsize="end"
-            android:textSize="16sp"/>
+            android:textSize="14sp"
+            android:textColor="@color/text_nearly_black"/>
         <com.staples.mobile.cfa.widget.PriceSticker
             android:id="@+id/cartitem_price"
             style="@style/SmallPriceSticker"
-            android:layout_below="@id/cartitem_title"/>
-         <Button
+            android:layout_below="@id/cartitem_title"
+            android:paddingTop="10dp"
+            android:paddingBottom="11dp"/>
+        <ImageView
             android:id="@+id/cartitem_delete"
-            android:layout_width="34dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/cartitem_price"
             android:layout_alignParentLeft="true"
             android:layout_gravity="center_vertical"
-            android:text="X"
-            android:textSize="14dp"
-            android:fontFamily="sans-serif"
-            android:paddingTop="0dp"
-            android:paddingBottom="0dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="0dp"
+            android:padding="1dp"
+            android:src="@drawable/ic_close_black_18dp"
             />
         <com.staples.mobile.cfa.widget.QuantityEditor
             android:id="@+id/cartitem_qty"
@@ -60,7 +58,8 @@
             android:layout_below="@id/cartitem_price"
             android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
-            android:textSize="18sp"
+            android:textSize="14sp"
+            android:textColor="@color/text_nearly_black"
             android:maxLength="4"
             app:maxQuantity="10"
             app:popupWidth="120dp"/>
