--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -14,9 +14,10 @@
     <color name="text_red">#ff0000</color>
     <color name="text_green">#00ff00</color>
     <color name="text_black">#000000</color>
+    <color name="text_nearly_black">#333333</color>
 	<color name="text_white">#FFFFFF</color>
 	<color name="text_light_gray">#BEC0BB</color>
 	<color name="text_orange_light">#FFA080</color>
-    <color name="text_gray">#808080</color>
+    <color name="text_gray">#8a8a8a</color>
     <color name="horizontal_divider">#fff5f5f5</color>
 </resources>
