--- a/app/src/main/res/layout/coupon_item_redeemable.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background_extra_light_gray"
-    android:padding="6dp">
+    android:paddingTop="4dp">
 
     <!--text fields-->
     <LinearLayout
