--- a/app/src/main/res/layout/order_listview_row.xml
+++ b/app/src/main/res/layout/order_listview_row.xml
@@ -20,6 +20,7 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="10dip"
             >
             <TextView
                 android:id="@+id/numItemsTV"
@@ -42,15 +43,16 @@
     </LinearLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="160dip"
         android:layout_height="wrap_content"
         android:text="Status"
         android:id="@+id/orderStatusTV"
-        android:padding="10dp"
         android:textSize="20dip"
         android:textColor="@android:color/holo_green_dark"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:ellipsize="end"
+        android:maxLines="1"/>
 
 </RelativeLayout >
