--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -20,6 +20,7 @@
         android:visibility="invisible">
         <!-- ActionBar -->
         <LinearLayout
+            android:id="@+id/action_bar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:orientation="horizontal"
@@ -34,7 +35,6 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:src="@drawable/ic_close_white"
-                android:clickable="true"
                 android:visibility="gone"/>
             <ImageView
                 android:id="@+id/action_left_drawer"
@@ -44,20 +44,27 @@
                 android:paddingLeft="6dp"
                 android:paddingRight="16dp"
                 android:src="@drawable/ic_menu_white"/>
+            <ImageView
+                android:id="@+id/action_logo"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/staples"/>
             <TextView
                 android:id="@+id/title"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:gravity="center_vertical|left"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
-                android:gravity="center_vertical|left"
                 android:lines="1"
                 android:ellipsize="end"
                 android:textSize="24sp"
-                android:textColor="@android:color/white"
-                android:text="@string/staples"/>
-            <!-- Search Bar -->
+                android:textColor="@android:color/white"/>
+            <!-- Spacer -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
             <com.staples.mobile.cfa.search.SearchBarView
                 android:id="@+id/search_text"
                 android:layout_width="0dp"
@@ -142,7 +149,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        android:clickable="false"
         android:background="#6f000022" >
         <ProgressBar
             android:layout_centerInParent="true"
