--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -198,7 +198,7 @@
         android:gravity="center_horizontal">
         <com.staples.mobile.cfa.widget.QuantityEditor
             android:id="@+id/quantity"
-            style="@style/HackEditorStyle"
+            style="@style/QtyEditorStyle"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
