--- a/app/src/main/res/layout/store_fragment_nomap.xml
+++ b/app/src/main/res/layout/store_fragment_nomap.xml
@@ -12,8 +12,9 @@
         android:imeOptions="actionSearch"
         android:singleLine="true"
         android:hint="@string/store_search_hint"/>
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
