--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -38,7 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="2dp"
         android:scrollbars="vertical"
         />
 
