--- a/app/src/main/res/layout/cart_item_group.xml
+++ b/app/src/main/res/layout/cart_item_group.xml
@@ -10,7 +10,8 @@
     android:layout_centerHorizontal="true"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_marginBottom="8dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="6dp"
     card_view:contentPadding="0dp"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="4dp">
